# buckshot-pi

./: .env.example  .gitignore  .gitmodules  README.md  cronjob.sh  drop_pi_caches.sh  get_cpu.sh  main.py  pi.sh  predict.py  pyproject.toml  setup.sh  ssh  take_still.py  test.py  test.sh
lib/: __init__.py  capture.py  check_AWS_response.py  require_env.py  upload.py  validate.py
parts/: __init__.py  capture.py  require_env.py  upload.py  validate.py
pi_util/: cpu_usage.sh  drop_pi_caches.sh  take_still.py
wheels/: ml_dtypes-0.4.1-cp313-cp313-linux_x86_64.whl
